Add ability to add read books

--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -10,13 +10,14 @@
 	margin: auto;
 	text-align: justify;
 	max-width: 960px;
-	margin-top: 100px;
+	margin-top: 40px;
 }
 
 
 .book {
 	display: inline-block;
 	margin: 10px;
+	text-align: center;
 }
 
 .book a {
