--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,29 @@
-// Place all the styles related to the Users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.profile-header {
+	height: 200px;
+	background-color: lightgray;
+}
+
+.knowledge-meter {
+	height: 50px;
+}
+
+.profile-bookshelf {
+	background-color: #efefef;
+	text-align: justify;
+}
+
+.plus-cover {
+	height: 150px;
+	width: 100px;
+	background-color: white;
+	display: inline-block;
+	margin: 10px;
+	p {
+		margin-top: 55px;
+		text-align: center;
+		font-size: 30px;
+		font-family: "Helvetica";
+		color: lightgray;
+		text-decoration: none;
+	}
+}
