--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,17 +1,8 @@
-<%= form_for(@book) do |f| %>
-  <% if @book.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+<% form_for :read_book, url: read_books_path do |f| %>
 
-      <ul>
-      <% @book.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= f.hidden_field :book_id, value: book.isbn %>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Add to read' %>
   </div>
 <% end %>
