--- a/app/views/general/home.html.erb
+++ b/app/views/general/home.html.erb
@@ -1,6 +1,9 @@
-<%= link_to 'Sign up', new_user_path %>
-
-<%= form_tag(books_path, :method => "get", id: "search-form") do %>
-  <%= text_field_tag :search, params[:search], placeholder: "Search Books" %>
-  <%= submit_tag "Search", :name => nil %>
+<% if session[:current_user_id] %>
+  <div class="simple-form">
+    <%= link_to 'Profile', user_path(current_user) %>
+  </div>
+<% else %>
+  <div class='simple-form'>
+    <%= link_to 'Sign up', new_user_path %>
+  </div>
 <% end %>
