--- a/app/views/read_books/_form.html.erb
+++ b/app/views/read_books/_form.html.erb
@@ -11,6 +11,8 @@
     </div>
   <% end %>
 
+  <%= f.hidden_field_tag(:book_id, "<%= book.id %>") %>
+
   <div class="actions">
     <%= f.submit %>
   </div>
