--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,16 +11,13 @@
     </div>
   <% end %>
 
-  <%= f.label :username %>
-  <%= f.text_field :username %>
+  <%= f.text_field :username, placeholder: 'Username' %><br>
 
-  <%= f.label :email %>
-  <%= f.text_field :email %>
+  <%= f.text_field :email, placeholder: 'Email' %><br>
 
-  <%= f.label :password %>
-  <%= f.password_field :password %>
+  <%= f.password_field :password, placeholder: 'Password' %>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Sign up' %>
   </div>
 <% end %>
