--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -9,20 +9,22 @@
 
 <div id="bookshelf">
   <% @books.each do |book| %>
-    <div class='book'>
-      <%= form_for :read_book, url: read_books_path do |f| %>
-      	<a href=""><img src="<%= book.image_link %>"></a>
-      	<%= f.hidden_field :user_id, value: current_user.id %>
-		    <%= f.hidden_field :isbn, value: book.isbn %>
-        <%= f.hidden_field :title, value: book.title %>
-        <%= f.hidden_field :author, value: book.authors %>
-        <%= f.hidden_field :category, value: book.categories %>
-        <%= f.hidden_field :pages, value: book.page_count.to_i %>
-        <%= f.hidden_field :cover_image, value: book.image_link %>
-        <div class="action">
-	  	    <%= f.submit 'Add to read' %>
-        </div>
-     <% end %>   
-		</div>
+    <% if !book.image_link.blank? %>
+      <div class='book'>
+        <%= form_for :read_book, url: read_books_path, remote: true, html: { :class => 'new_read_book' } do |f| %>
+        	<a href=""><img src="<%= book.image_link %>"></a>
+        	<%= f.hidden_field :user_id, value: current_user.id %>
+  		    <%= f.hidden_field :isbn, value: book.isbn %>
+          <%= f.hidden_field :title, value: book.title %>
+          <%= f.hidden_field :author, value: book.authors %>
+          <%= f.hidden_field :category, value: book.categories %>
+          <%= f.hidden_field :pages, value: book.page_count.to_i %>
+          <%= f.hidden_field :cover_image, value: book.image_link %>
+          <div class="action">
+  	  	    <%= f.submit 'Add to read' %>
+          </div>
+       <% end %>   
+  		</div>
+    <% end %>
   <% end %>
 </div>
