--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,6 +17,8 @@
 
   <%= f.password_field :password, placeholder: 'Password' %>
 
+  <%= f.file_field :avatar %>
+
   <div class="actions">
     <%= f.submit 'Sign up' %>
   </div>
