--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -3,7 +3,7 @@
 // }
 
 header {
-	background-color: #384249;
+	background-color: #2F2F2F;
  	position: fixed;
 	top: 0;
 	right: 0;
@@ -16,25 +16,25 @@ header {
 nav {
 	margin: 0 auto;
 	width: 960px;
-	padding: 5px;
-	overflow: auto;
 	font-family: "Helvetica";
+	height: 50px;
 }
 
 header nav h1 {
 	float: left;
-	margin: 10px;
+	margin: 11px 0 0 10px;
 	text-transform: uppercase;
 }
 
 header nav ul {
 	float: right;
-	margin: 10px;
 	list-style: none;
-	margin-top: 15px;
+	height: 50px;
+	margin: 0;
 }
 
 header nav a {
+	margin: 0;
 	text-decoration: none;
 	color: white;
 }
@@ -42,6 +42,17 @@ header nav a {
 header nav a:hover {
 	background-color: transparent;
 	color: white;
+}
+
+#log-in-link {
+	margin: 16px 10px 0 0;
+}
+
+#user-menu {
+	img {
+		border-radius: 100%;
+		margin: 10px 10px 0 0;
+	}
 }
 
 .container {
@@ -69,13 +80,13 @@ header nav a:hover {
 	text-align: center;
 	font-family: "Helvetica";
 	input {
-				height: 35px;
-				width: 180px;
-				padding-left: 13px;
-				border: none;
-				outline-style: none;
-				line-height: 20px;
-				border-radius: 5px;
+		height: 35px;
+		width: 180px;
+		padding-left: 13px;
+		border: none;
+		outline-style: none;
+		line-height: 20px;
+		border-radius: 5px;
 	}
 }
 
