--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,15 @@
       <a href="/"><h1>shelfie</h1></a>
       <% if logged_in? %>
         <ul>
-          <li><%= link_to current_user.username, session_path(current_user), method: 'delete' %></li>
+          <li id="user-menu">
+            <%= link_to image_tag(current_user.avatar.url(:thumb)), user_path(current_user) %>
+          </li>
         </ul>
       <% else %>
         <ul>
-          <li><%= link_to 'Log in', new_session_path %></li>
+          <li id="log-in-link">
+            <%= link_to 'Log in', new_session_path %>
+          </li>
         </ul>
       <% end %>
     </nav>
