--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -1,7 +1,3 @@
-// * {
-// 	border: 1px solid black;
-// }
-
 header {
 	background-color: #2F2F2F;
  	position: fixed;
@@ -12,26 +8,67 @@ header {
 	box-shadow: 0px 0px 6px #888888;
 	height: 50px;
 	z-index: 100;
+	nav {
+		font-family: "Helvetica";
+		height: 50px;
+	}
+	#nav-main {
+		margin: 0 auto;
+		width: 960px;
+		#nav-left {
+			margin: 0;
+			width: 70%;
+			display: inline-block;
+			float: left;
+			h1 {
+				display: inline-block;
+				float: left;
+				margin: 14px 0 0 10px;
+				padding: 0;
+			}
+		}
+		#nav-right {
+			margin: 0;
+			display: inline-block;
+			width: 30%;
+			#user-menu {
+				margin: 0;
+				float: right;
+				height: 50px;
+				display: inline-block;
+				position: relative;
+				span {
+					float: left;
+					display: inline-block;
+					margin: 16px 10px 0 0;
+				}
+				img {
+					float: right;
+					border-radius: 100%;
+					margin: 10px 10px 0 0;
+				}
+			}
+			#user-menu-options {
+				float: right;
+				clear: right;
+				background-color: white;
+				margin: 0 10px 0 0;
+				z-index: 100;
+				ul {
+					list-style: none;
+					margin: 0;
+					padding: 10px;
+					li {
+						padding: 5px;
+					}
+				}
+			}
+		}	
+	}
 }
 
-nav {
-	margin: 0 auto;
-	width: 960px;
-	font-family: "Helvetica";
-	height: 50px;
-}
-
-header nav h1 {
-	float: left;
-	margin: 11px 0 0 10px;
-	text-transform: uppercase;
-}
-
-header nav ul {
-	float: right;
-	list-style: none;
-	height: 50px;
-	margin: 0;
+#log-in-link {
+	margin: 16px 10px 0 0;
 }
 
 header nav a {
@@ -43,17 +80,6 @@ header nav a {
 header nav a:hover {
 	background-color: transparent;
 	color: white;
-}
-
-#log-in-link {
-	margin: 16px 10px 0 0;
-}
-
-#user-menu {
-	img {
-		border-radius: 100%;
-		margin: 10px 10px 0 0;
-	}
 }
 
 .container {
