--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -1,4 +1,5 @@
 header {
+	// background-image: image-url("green-texture.png");
 	background-color: #2F2F2F;
  	position: fixed;
 	top: 0;
@@ -8,15 +9,12 @@ header {
 	box-shadow: 0px 0px 6px #888888;
 	height: 50px;
 	z-index: 100;
-	nav {
+	#nav-main {
 		font-family: "Helvetica";
 		height: 50px;
-	}
-	#nav-main {
 		margin: 0 auto;
 		width: 960px;
 		#nav-left {
-			margin: 0;
 			width: 70%;
 			display: inline-block;
 			float: left;
@@ -25,43 +23,57 @@ header {
 				float: left;
 				margin: 14px 0 0 10px;
 				padding: 0;
+				font-size: 1.25em;
 			}
 		}
 		#nav-right {
-			margin: 0;
 			display: inline-block;
 			width: 30%;
 			#user-menu {
-				margin: 0;
 				float: right;
 				height: 50px;
 				display: inline-block;
 				position: relative;
+				font-size: .85em;
 				span {
 					float: left;
 					display: inline-block;
-					margin: 16px 10px 0 0;
+					margin: 17px 10px 0 0;
+					color: white;
+				}
+				#logged-out-image {
+					float: right;
+					border-radius: 100%;
+					margin: 10px 10px 0 0;
+					background-color: lightgray;
+					height: 30px;
+					width: 30px;
 				}
 				img {
 					float: right;
 					border-radius: 100%;
 					margin: 10px 10px 0 0;
 				}
-			}
-			#user-menu-options {
-				float: right;
-				clear: right;
-				background-color: white;
-				margin: 0 10px 0 0;
-				z-index: 100;
-				ul {
-					list-style: none;
+				.user-menu-options {
 					margin: 0;
-					padding: 10px;
+					display: none;
+					position: absolute;
+					background-color: lightgray;
+					z-index: 100;
+					top: 50px;
+					right: 10px;
+					list-style: none;
+					padding: 5px;
 					li {
-						padding: 5px;
+						padding: 10px;
+					}
+					li:hover {
+						background-color: gray;
 					}
 				}
+			}
+			#user-menu:hover .user-menu-options {
+				display: block;
 			}
 		}	
 	}
@@ -106,6 +118,9 @@ header nav a:hover {
 	margin: 250px auto;
 	text-align: center;
 	font-family: "Helvetica";
+	span {
+		font-size: .85em;
+	}
 	input {
 		height: 35px;
 		width: 180px;
