--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -21,9 +21,16 @@ header {
 			h1 {
 				display: inline-block;
 				float: left;
-				margin: 14px 0 0 10px;
+				margin: 10.5px 15px 0 10px;
 				padding: 0;
-				font-size: 1.25em;
+				font-size: 25px;
+			}
+			h2 {
+				display: inline-block;
+				font-size: 15px;
+				float: left;
+				margin: 16px 15px 0 15px;
+				padding: 0;
 			}
 		}
 		#nav-right {
@@ -40,6 +47,16 @@ header {
 					display: inline-block;
 					margin: 17px 10px 0 0;
 					color: white;
+				}
+				h2 {
+					display: inline-block;
+					font-size: 15px;
+					float: left;
+					margin: 16px 10px 0 0;
+					padding: 0;
+				}
+				#navbar-username {
+					font-weight: normal;
 				}
 				#logged-out-image {
 					float: right;
@@ -99,6 +116,12 @@ header nav a:hover {
 	max-width: 960px;
 }
 
+// #logged-out-home-container {
+// 	background-color: #2F2F2F;
+// 	width: 100%;
+// 	height: 100%;
+// }
+
 .simple-form {
 	heigth: 25px;
 	width: 75px;
@@ -135,4 +158,20 @@ header nav a:hover {
 .book-search {
 	margin-top: 100px;
 	text-align: center;
+	input[type="text"] {
+		height: 25px;
+		width: 200px;
+		border: none;
+		border-bottom: 2px solid #2F2F2F;
+	}
+	input[type="submit"] {
+		border: none;
+		background-color: none;
+		margin: 8px 0 0 0;
+	}
 }
+hr {
+	color: #2F2F2F;
+	background-color: #2F2F2F;
+}
+
