--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,16 @@
         <%= link_to root_path do %>
           <h1>Shelfie</h1>
         <% end %>
-        <%= link_to root_path do %>
-          <h2>Home</h2>
-        <% end %>
-        <%= link_to books_path do %>
-          <h2>Books</h2>
-        <% end %>
-        <%= link_to users_path do %>
-          <h2>People</h2>
+        <% if logged_in? %>
+          <%= link_to root_path do %>
+            <h2>Home</h2>
+          <% end %>
+          <%= link_to books_path do %>
+            <h2>Books</h2>
+          <% end %>
+          <%= link_to users_path do %>
+            <h2>People</h2>
+          <% end %>
         <% end %>
       </nav>
       <nav id="nav-right">
@@ -48,7 +50,6 @@
             <%= link_to new_session_path do %>
               <h2>Log in</h2>
             <% end %>
-            <%= render 'sessions/form' %>
           </div>
         <% end %>
       </nav>
