--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -1,3 +1,19 @@
+.book-search {
+	margin-top: 100px;
+	text-align: center;
+	input[type="text"] {
+		height: 25px;
+		width: 200px;
+		border: none;
+		border-bottom: 2px solid #2F2F2F;
+	}
+	input[type="submit"] {
+		border: none;
+		background-color: none;
+		margin: 8px 0 0 0;
+	}
+}
+
 #bookshelf {
 	margin: auto;
 	text-align: justify;
