--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -15,7 +15,7 @@
 
   <%= f.text_field :email, placeholder: 'Email' %><br>
 
-  <%= f.password_field :password, placeholder: 'Password' %>
+  <%= f.password_field :password, placeholder: 'Password' %><br>
 
   <%= f.file_field :avatar %>
 
