--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,11 +16,11 @@
       <% end %>
     </header>
 
-    <div id="content">
-      <main>
+    <main>
+      <div id='content'>
         <%= yield %>
-      </main>
-    </div>
+      </div>
+    </main>
 
   </body>
 </html>
