--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -1,3 +1,9 @@
+body {
+	margin: 0;
+	font-smoothing: antialiased;
+	-webkit-font-smoothing: antialiased;
+}
+
 header {
 	height: 60px;
 	width: 100%;
@@ -105,11 +111,56 @@ header {
 	}
 }
 
-#content {
-	
-	main {
-		margin: 60px auto;
+main {
+	width: 100%;
+	margin: 60px 0 0 0;
+
+	#content {
+		margin: auto;
 		max-width: 960px;
+
+		#search-bar {
+			margin-top: 120px;
+			text-align: center;
+		}
+
+		#search-results {
+			text-align: justify;
+			margin-top: 40px;
+		}
+
+		#l-col {
+			display: inline-block;
+			width: 180px;
+			font-family: "Helvetica";
+			float: left;
+
+			h3 {
+				padding: 0 0 0 10px;
+			}
+		}
+
+		#c-col {
+			display: inline-block;
+			width: 500px;
+			font-family: "Helvetica";
+			float: left;
+
+			h3 {
+				padding: 0 0 0 10px;
+			}
+		}
+
+		#r-col {
+			display: inline-block;
+			width: 280px;
+			font-family: "Helvetica";
+			float: right;
+
+			h3 {
+				padding: 0 0 0 10px;
+			}
+		}
 	}
 }
 
@@ -138,5 +189,4 @@ form {
 	margin: 250px auto;
 	background-color: lightgray;
 	z-index: 100;
-	border-radius: 2px;
 }
