--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class="book-search">
+<div id="search-bar">
   <%= form_tag(users_path, :method => "get", id: "search-form") do %>
     <%= text_field_tag :search, params[:search], placeholder: "Search people" %>
     <br>
@@ -6,18 +6,16 @@
   <% end %>
 </div>
 
-<div id="bookshelf">
+<p id="notice"><%= notice %></p>
+
+<div id="search-results">
   <% if @users != nil %>
-    <% if @users.class == Array %>
-      <% @users.each do |user| %>
-        <div class='user'>
-            <p><%= user.username %></p>
-            <p><%= user.books.count %></p>
-        </div>
-      <% end %>
-    <% else %>
-      <p><%= @users.username %></p>
-      <p><%= @users.books.count %></p>
+    <% @users.each do |user| %>
+      <div class='user'>
+        <%= image_tag user.avatar.url(:medium) %>
+        <p><%= user.username %></p>
+        <p><%= user.books.count %></p>
+      </div>
     <% end %>
   <% end %>
 </div>
