Add following and unfollowing of users

--- a/app/assets/stylesheets/relationships.css.scss
+++ b/app/assets/stylesheets/relationships.css.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the relationships controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#follow_form {
+	display: inline-block;
+	
+	form {
+		padding: 0;
+
+		input[type=submit] {
+			width: 95px;
+			margin: 0;
+		}	
+	}
+	
+}
