Add more book sizes

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -21,10 +21,10 @@
 	}
 }
 
-#divider {
+#book-nav-bar {
 	margin: 0 0 15px 0;
 	background-color: #374140;
-	height: 2px;
+	height: 30px;
 }
 
 .profile-bookshelf {
