--- a/app/views/layouts/_nav_o.html.erb
+++ b/app/views/layouts/_nav_o.html.erb
@@ -8,7 +8,7 @@
 	<div id='nav-right'>
 		<div id='nav-toggler'>
 			<%= link_to new_session_path do %>
-        <h2>Log in</h2>
+        <h2 id='log-in'>Log in</h2>
       <% end %>
 		</div>
 
