--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
-	font-smoothing: antialiased;
-	-webkit-font-smoothing: antialiased;
+	// font-smoothing: antialiased;
+	// -webkit-font-smoothing: antialiased;
 }
 
 header {
@@ -35,13 +35,14 @@ header {
 			h1 {
 				display: inline-block;
 				float: left;
-				margin: 12.5px 15px 12.5px 10px;
-				padding: 0;
+				margin: 7.5px 7.5px 7.5px 5px;
+				padding: 7.5px 7.5px 7.5px 5px;
 				font-size: 30px;
 				font-weight: normal;
 			}
 
 			ul {
+				height: 60px;
 				float: left;
 				padding: 0;
 				font-weight: normal;
@@ -51,7 +52,14 @@ header {
 				li {
 					font-size: 15px;
 					display: inline-block;
-					margin: 21.5px 15px 21.5px 15px;
+					margin: 10px 7.5px;
+					padding: 12.5px 7.5px;
+				}
+
+				li:hover {
+					background-color: white;
+					color: #374140;
+					border-radius: 2px;
 				}
 			}
 		}
@@ -64,6 +72,7 @@ header {
 			position: relative;
 
 			#nav-toggler {
+				height: 60px;
 				display: inline-block;
 				float: right;
 				margin: 0 10px 0 0;
@@ -71,9 +80,21 @@ header {
 				h2 {
 					float: left;
 					display: inline-block;
-					margin: 21.5px 0 21.5px 0;
+					margin: 10px 0;
+					padding: 12.5px 7.5px;
 					font-size: 15px;
 					font-weight: normal;
+				}
+
+				#log-in {
+					margin: 10px 0;
+					padding: 12.5px 7.5px;
+				}
+
+				#log-in:hover {
+					background-color: white;
+					color: #374140;
+					border-radius: 2px;
 				}
 
 				img {
@@ -178,9 +199,18 @@ form {
 		margin: 5px 10px;
 	}
 
+	input[type=file] {
+		height: 18px;
+		padding: 0;
+	}
+
 	input[type=submit] {
 		padding: 0;
 		width: 190px;
+	}
+
+	input[type=submit]:hover {
+		
 	}
 }
 
