--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,7 +20,9 @@
           <%= f.hidden_field :author, value: book.authors %>
           <%= f.hidden_field :category, value: book.categories %>
           <%= f.hidden_field :pages, value: book.page_count.to_i %>
-          <%= f.hidden_field :cover_image, value: book.image_link %>
+          <%= f.hidden_field :cover_thumbnail, value: book.image_link(:zoom => 5) %>
+          <%= f.hidden_field :cover_small, value: book.image_link %>
+          <%= f.hidden_field :cover_medium, value: book.image_link(:zoom => 2) %>
           <div class="action">
   	  	    <%= f.submit 'Add to read' %>
           </div>
