--- a/app/views/layouts/_nav_i.html.erb
+++ b/app/views/layouts/_nav_i.html.erb
@@ -4,20 +4,28 @@
       <%= link_to 'Shelfie', root_path %>
     </h1>
     <ul>
-      <li><%= link_to 'Home', root_path %></li>
-      <li><%= link_to 'Books', books_path %></li>
-      <li><%= link_to 'People', users_path %></li>
-      <li><%= link_to 'Clubs', clubs_path %></li>
+      <%= link_to root_path do %>
+        <li>Home</li>
+      <% end %>
+      <%= link_to books_path do %>
+        <li>Books</li>
+      <% end %>
+      <%= link_to users_path do %>
+        <li>People</li>
+      <% end %>
+      <%= link_to clubs_path do %>
+        <li>Clubs</li>
+      <% end %>
     </ul>
   </div>
 
   <div id='nav-right'>
-    <div id='nav-toggler'>
-      <%= link_to user_path(current_user) do %>
+    <%= link_to user_path(current_user) do %>
+      <div id='nav-toggler'>
         <h2><%= current_user.username %></h2>
         <%= image_tag(current_user.avatar.url(:thumb)) %>
-      <% end %>
-    </div>
+      </div>
+    <% end %>
 
     <div id='toggled'>
       <ul>
