--- a/app/views/readerships/_form.html.erb
+++ b/app/views/readerships/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@read_book) do |f| %>
+<%= form_for(@readership) do |f| %>
   <% if @read_book.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@read_book.errors.count, "error") %> prohibited this read_book from being saved:</h2>
