--- a/app/assets/stylesheets/books.css.scss
+++ b/app/assets/stylesheets/books.css.scss
@@ -1,6 +1,10 @@
+#bookshelf {
+	text-align: justify;
+}
+
 .book {
 	display: inline-block;
-	margin: 5px 10px 0 10px;
+	margin: 15px 0 0 0;
 	text-align: center;
 
 	img {
@@ -19,5 +23,17 @@
 	input[type=submit] {
 		height: auto;
 		width: auto;
+	}
+}
+
+// .search-header {
+// 	padding: 0;
+// }
+
+#search-form {
+	input {
+		border: none;
+		// height: 30px;
+		// padding: 0;
 	}
 }
