--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -1,223 +1,13 @@
-body {
-	margin: 0;
-	background-color: #e9e9e9;
-	// font-smoothing: antialiased;
-	// -webkit-font-smoothing: antialiased;
+#general-search {
+	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
-header {
-	height: 60px;
-	width: 100%;
-	background-color: #374140;
-	box-shadow: 0px 0px 6px #888888;
- 	position: fixed;
-	top: 0;
-	right: 0;
-	left: 0;
-	z-index: 100;
-	font-family: "Helvetica";
-	
-	nav {
-		height: 60px;
-		width: 960px;
-		margin: 0 auto;
-
-		a {
-			color: white;
-			text-decoration: none;
-		}
-
-		#nav-left {
-			height: 60px;
-			width: 70%;
-			display: inline-block;
-			float: left;
-
-			h1 {
-				display: inline-block;
-				float: left;
-				margin: 7.5px 7.5px 7.5px 5px;
-				padding: 7.5px 7.5px 7.5px 5px;
-				font-size: 30px;
-				font-weight: normal;
-			}
-
-			ul {
-				height: 60px;
-				float: left;
-				padding: 0;
-				font-weight: normal;
-				list-style: none;
-				margin: 0;
-
-				li {
-					font-size: 15px;
-					display: inline-block;
-					margin: 10px 7.5px;
-					padding: 12.5px 7.5px;
-				}
-
-				li:hover {
-					background-color: white;
-					color: #374140;
-					border-radius: 2px;
-				}
-			}
-		}
-
-		#nav-right {
-			height: 60px;
-			width: 30%;
-			display: inline-block;
-			float: right;
-			position: relative;
-
-			#nav-toggler {
-				height: 60px;
-				display: inline-block;
-				float: right;
-				margin: 0 10px 0 0;
-
-				h2 {
-					float: left;
-					display: inline-block;
-					margin: 10px 0;
-					padding: 12.5px 7.5px;
-					font-size: 15px;
-					font-weight: normal;
-				}
-
-				#log-in {
-					margin: 10px 0;
-					padding: 12.5px 7.5px;
-				}
-
-				#log-in:hover {
-					background-color: white;
-					color: #374140;
-					border-radius: 2px;
-				}
-
-				img {
-					float: right;
-					border-radius: 100%;
-					margin: 10px 0 10px 10px;
-				}
-			}
-
-			#toggled {
-				margin: 0;
-				display: none;
-				position: absolute;
-				background-color: lightgray;
-				z-index: 100;
-				top: 60px;
-				right: 10px;
-
-				ul {
-					padding: 0;
-					list-style: none;
-					margin: 0;
-
-					li {
-						font-size: 15px;
-						padding: 5px 10px;
-					}
-
-					li:hover {
-						background-color: gray;
-					}
-				}
-			}
-		}	
-	}
+#current-user-menu {
+	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 main {
-	width: 100%;
-	margin: 60px 0 0 0;
-
-	#content {
-		margin: auto;
-		max-width: 960px;
-
-		#search-bar {
-			margin-top: 120px;
-			text-align: center;
-		}
-
-		#search-results {
-			text-align: justify;
-			margin-top: 40px;
-		}
-
-		#l-col {
-			display: inline-block;
-			width: 180px;
-			font-family: "Helvetica";
-			float: left;
-
-			h3 {
-				padding: 0 0 0 10px;
-			}
-		}
-
-		#c-col {
-			display: inline-block;
-			width: 500px;
-			font-family: "Helvetica";
-			float: left;
-
-			h3 {
-				padding: 0 0 0 10px;
-			}
-		}
-
-		#r-col {
-			display: inline-block;
-			width: 280px;
-			font-family: "Helvetica";
-			float: right;
-
-			h3 {
-				padding: 0 0 0 10px;
-			}
-		}
-	}
-}
-
-form {
-	padding: 5px 0 5px 0;
-
-	input {
-		height: 35px;
-		width: 180px;
-		padding: 0 0 0 10px;
-		font-family: "Helvetica";
-		border: none;
-		line-height: 20px;
-		border-radius: 2px;
-		margin: 5px 10px;
-	}
-
-	input[type=file] {
-		height: 18px;
-		padding: 0;
-	}
-
-	input[type=submit] {
-		padding: 0;
-		width: 190px;
-	}
-
-	input[type=submit]:hover {
-		
-	}
-}
-
-#sign-up-form {
-	width: 210px;
-	margin: 250px auto;
-	background-color: lightgray;
-	z-index: 100;
+	margin-top: 68px;
 }
