--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,60 @@
-<div id="profile-header">
-  <%= image_tag @user.avatar.url(:large) %>
-  <div id="profile-information">
+<div class="row" id="profile-header">
+  <div class="col-md-2">
+    <%= image_tag @user.avatar.url(:large), class: "img-rounded" %>
+  </div>
+  <div class="col-md-4">
     <h1><%= @user.username %></h1>
     <%= render 'relationships/stats' %>
     <%= render 'follow_form' if logged_in? %>
   </div>
+  <div class="col-md-6">
+    
+  </div>
 </div>
 
-<div id="book-nav-bar"></div>
-
-<div class="profile-bookshelf">
-  <% @books.each do |book| %>
-    <div class="book">
-      <a href=""><img src="<%= book.cover_small %>"></a>
+<div class="row">
+  <div class="col-md-12">
+    <div class="progress" id="knowledge-ratio">
+      <% @user.knowledge_ratio.each do |category, percentage| %>
+        <div class="progress-bar" style="width: <%= percentage %>%; background-color: <%= random_hex %>">
+          <span class="sr-only"><%= category %></span>
+          <%= percentage %>% <%= category %>
+        </div>
+      <% end %>
     </div>
-  <% end %>
-  <div class="book">
-    <a href="<%= books_path %>" title="Add a book"><img src="<%= image_path("book.png") %>" alt=""></a>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-12" id="bookshelf">
+    <% @books.each do |book| %>
+      <a href="<%= book_path(book) %>" class="book">
+        <img src="<%= book.cover_small %>">
+      </a>
+    <% end %>
+    <div class="book">
+      <a href="" title="Add a book" data-toggle="modal" data-target=".bs-example-modal-lg"><img src="<%= image_path("book.png") %>" alt=""></a>
+    </div>
+  </div>
+</div>
+
+<!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Large modal</button> -->
+<div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header search-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
+        <div id="search-bar">
+          <%= form_tag(books_path, :method => "get", id: "search-form") do %>
+            <%= text_field_tag :search, params[:search], autofocus: true, placeholder: "Search books" %>
+          <% end %>
+        </div>
+      </div>
+        <p id="notice"><%= notice %></p>
+
+        <div id="search-results">
+          
+        </div>
+    </div>
   </div>
 </div>
